<resources>
    <string name="app_name">DomitiLuz</string>
    <string name="global_btn_agregar">Agregar</string>
    <string name="global_btn_editar">Editar</string>
    <string name="global_btn_eliminar">Eliminar</string>
    <string name="main_msj_bienvenida">Encendé tu mundo. Elegí una habitación y ajustá la luz a tu medida.</string>
    <string name="main_btn_habitaciones">Habitaciones</string>
    <string name="main_btn_escenarios">Escenarios</string>
    <string name="hab_titulo">Habitaciones</string>
    <string name="hab_msj_principal">Administre las habitaciones que desea controlar</string>
    <string name="hab_msj_secundario">* Puede agregar hasta 10 habitaciones (con id entre 1 y 10).</string>
    <string name="esc_titulo">Escenarios</string>
    <string name="esc_msj_principal">Administre las escenarios que desea controlar</string>
    <string name="esc_msj_secundario">Agregue escenarios.</string>
    <string name="guardar">Guardar</string>
    <string name="id_del_escenario">ID del escenario</string>
    <string name="nombre_del_escenario">Nombre del escenario</string>
</resources>