<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EscenariosActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/esc_titulo"
        app:titleTextColor="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtPrincipal"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/esc_msj_principal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtSecundario"/>

    <TextView
        android:id="@+id/txtSecundario"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/esc_msj_secundario"
        app:layout_constraintTop_toBottomOf="@+id/txtPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sviewEscenarios"/>

    <ScrollView
        android:id="@+id/sviewEscenarios"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/design_default_color_surface"
        app:layout_constraintTop_toBottomOf="@+id/txtSecundario"
        app:layout_constraintBottom_toTopOf="@id/btnAgregarEscenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutEscenarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btnAgregarEscenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEditarEscenario" />

    <Button
        android:id="@+id/btnEditarEscenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEliminarEscenario"
        app:layout_constraintStart_toEndOf="@id/btnAgregarEscenario" />

    <Button
        android:id="@+id/btnEliminarEscenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_eliminar"
        android:backgroundTint="@color/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEditarEscenario" />
</androidx.constraintlayout.widget.ConstraintLayout>