<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HabitacionesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/hab_titulo"
        app:titleTextColor="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtPrincipal"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hab_msj_principal"
        app:layout_constraintBottom_toBottomOf="@+id/txtSecundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/txtSecundario"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hab_msj_secundario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrincipal"
        app:layout_constraintBottom_toTopOf="@+id/txtPrincipal"
        app:layout_constraintVertical_bias="0.074" />


    <LinearLayout
        android:id="@+id/layoutHabitaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </LinearLayout>


    <!-- Botones de habitación -->
    <GridLayout
        android:id="@+id/roomGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtSecundario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Ejemplo de una habitación -->


    </GridLayout>


    <Button
        android:id="@+id/btnAgregarHabitacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditarHabitacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomGrid"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEditarHabitacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarHabitacion"
        app:layout_constraintStart_toEndOf="@+id/btnAgregarHabitacion"
        app:layout_constraintTop_toBottomOf="@+id/roomGrid"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEliminarHabitacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_btn_eliminar"
        android:backgroundTint="@color/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEditarHabitacion"/>
    <!--app:layout_constraintTop_toBottomOf="@+id/sviewHabitaciones" -->

</androidx.constraintlayout.widget.ConstraintLayout>